--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_test
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_test?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
 spring.datasource.username=user
 spring.datasource.password=123456
